add comment "gosu block" as notebook

--- a/v2ray/Dockerfile
+++ b/v2ray/Dockerfile
@@ -7,6 +7,10 @@ RUN apk --no-cache add \
     && apk --purge del \
            gettext
 
+# RUN wget -c https://github.com/tianon/gosu/releases/download/1.10/gosu-amd64 -o /bin/gosu \
+#     && chmod +x gosu \
+#     && adduser -D v2ray
+
 ADD vmess-config.json.tpl /etc/v2ray/vmess-config.json.tpl
 ADD entrypoint.sh /entrypoint.sh
 
